[gd_scene load_steps=10 format=3 uid="uid://ba4bnn0f2p2fc"]

[ext_resource type="Script" path="res://Script/Entity/Slash/Evade_Blade.gd" id="1_c5a1k"]
[ext_resource type="Texture2D" uid="uid://cyj64qbyj0x66" path="res://Asset/Weapon/Slash/Sword_X.png" id="3_at1qc"]
[ext_resource type="Texture2D" uid="uid://de7s6l6nixm4b" path="res://Asset/Texture/Effect/GlitchHon.png" id="3_explp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bxpfu"]
radius = 100.0
height = 400.0

[sub_resource type="Gradient" id="Gradient_i8mrp"]
offsets = PackedFloat32Array(0, 0.128114, 0.516014, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_doao8"]

[sub_resource type="Curve" id="Curve_amcp0"]
_data = [Vector2(0, 0.663158), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_xyu16"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fp462"]
radius = 125.0
height = 450.0

[node name="Punch" type="RigidBody2D" groups=["slash"]]
collision_layer = 4
collision_mask = 0
gravity_scale = 0.0
max_contacts_reported = 10
contact_monitor = true
lock_rotation = true
linear_damp = 5.0
script = ExtResource("1_c5a1k")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bxpfu")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Glitch" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
lifetime = 2.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
local_coords = true
texture = ExtResource("3_explp")
emission_shape = 3
emission_rect_extents = Vector2(160, 60)
direction = Vector2(-1, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_max = 400.0
damping_min = 5.0
damping_max = 50.0
scale_amount_min = 5.0
scale_amount_max = 10.0
color_ramp = SubResource("Gradient_i8mrp")
color_initial_ramp = SubResource("Gradient_doao8")

[node name="Glitch2" type="CPUParticles2D" parent="."]
emitting = false
amount = 500
one_shot = true
speed_scale = 2.0
lifetime_randomness = 0.5
emission_shape = 3
emission_rect_extents = Vector2(160, 60)
spread = 0.0
gravity = Vector2(0, 0)
damping_min = 5.0
damping_max = 50.0
scale_amount_min = 10.0
scale_amount_max = 20.0
color = Color(0, 0, 0, 1)

[node name="Glitch3" type="CPUParticles2D" parent="."]
scale = Vector2(0.5, 1)
emitting = false
amount = 5
one_shot = true
speed_scale = 3.0
local_coords = true
texture = ExtResource("3_at1qc")
direction = Vector2(-1, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 1000.0
initial_velocity_max = 1000.0
scale_amount_curve = SubResource("Curve_amcp0")
color = Color(0, 0, 0, 1)
color_ramp = SubResource("Gradient_xyu16")

[node name="Glitch4" type="CPUParticles2D" parent="."]
emitting = false
amount = 500
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
lifetime_randomness = 0.5
emission_shape = 3
emission_rect_extents = Vector2(160, 60)
gravity = Vector2(0, 0)
initial_velocity_min = 500.0
initial_velocity_max = 1000.0
damping_min = 5.0
damping_max = 50.0
scale_amount_min = 10.0
scale_amount_max = 20.0
color = Color(0, 0, 0, 1)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_fp462")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
